--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
         const p = Math.min(s / lockDistance, 1);
 
         if (s < lockDistance) {
-          hero.classList.add("is-fixed", "show-title");
+          hero.classList.add("show-title");
         } else {
           hero.classList.remove("is-fixed");
         }
