--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 
       <div class="pricing">
         <div class="price-card">
-          <h3>BASE</h3>
+          <h3>ТАРИФ - BASE</h3>
           <p>Прямой путь без срочности и приоритетов.</p>
           <div class="price">
             $: Прайс пока корректируется) (но это временно(но это не точно))
@@ -300,7 +300,7 @@
         </div>
 
         <div class="price-card">
-          <h3>PRO</h3>
+          <h3>ТАРИФ - PRO</h3>
           <p>Персональный контроль с нотками сарказма и творчества.</p>
           <div class="price">$: Это безценно</div>
         </div>
